--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "font-awesome": "^4.7.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
